output/xst_p5_25_124/foundry_validation/F-001_Missing_initializer_leaves_ownership_and/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xb276647E70CB3b81a1cA302Cf8DE280fF0cE5799". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xb276647E70CB3b81a1cA302Cf8DE280fF0cE5799". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
   --> src/FlawVerifier.sol:359:38:
    |
359 |     address public constant TARGET = 0xb276647e70cb3b81a1ca302cf8de280ff0ce5799;
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

